// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cards/Card can have a subtitle 1`] = `
<div
  className="mdc-card"
>
  <section
    className="mdc-card__primary"
  >
    
    
    <h2
      className="mdc-card__subtitle"
    >
      bar
    </h2>
  </section>
</div>
`;

exports[`components/cards/Card can have a title 1`] = `
<div
  className="mdc-card"
>
  <section
    className="mdc-card__primary"
  >
    
    <h1
      className="mdc-card__title"
    >
      foo
    </h1>
    
  </section>
</div>
`;

exports[`components/cards/Card can have an horizontal block 1`] = `
<div
  className="mdc-card"
>
  <div
    className="mdc-card__horizontal-block"
  >
    
  </div>
</div>
`;

exports[`components/cards/Card can have children 1`] = `
<div
  className="mdc-card"
>
  
  Children are here!
</div>
`;
